--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,6 +85,9 @@
         android:layout_marginStart="39dp"
         android:layout_marginBottom="192dp"
         android:text="View"
+        app:icon="@drawable/viewicon_foreground"
+        app:iconPadding="0dp"
+        app:iconSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -94,6 +97,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:text="Delete"
+        app:icon="@android:drawable/ic_delete"
+        app:iconPadding="0dp"
+        app:iconSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/bt2"
         app:layout_constraintEnd_toEndOf="@+id/upd" />
 
@@ -104,10 +110,15 @@
         android:layout_marginTop="65dp"
         android:layout_marginBottom="64dp"
         android:text="SignOut"
+        app:icon="@drawable/signouticon_foreground"
+        app:iconPadding="0dp"
+        app:iconSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.924"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ad" />
+        app:layout_constraintTop_toTopOf="@+id/ad"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/upd"
@@ -116,6 +127,9 @@
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="24dp"
         android:text="Update"
+        app:icon="@drawable/producticon_foreground"
+        app:iconPadding="0dp"
+        app:iconSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/del"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -125,6 +139,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
         android:text="Add"
+        app:icon="@drawable/addicon_foreground"
+        app:iconPadding="0dp"
+        app:iconSize="30dp"
         app:layout_constraintStart_toStartOf="@+id/vw"
         app:layout_constraintTop_toBottomOf="@+id/vw" />
 
@@ -133,11 +150,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Find"
+        app:icon="@drawable/findproducts_foreground"
+        app:iconPadding="0dp"
+        app:iconSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cp"
         app:layout_constraintVertical_bias="0.117" />
+
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back to Mainmenu"
+        app:icon="@drawable/backicon_foreground"
+        app:iconPadding="0dp"
+        app:iconSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/bt2"
+        app:layout_constraintHorizontal_bias="0.451"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.91" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
