--- a/app/src/main/res/layout/activity_stock.xml
+++ b/app/src/main/res/layout/activity_stock.xml
@@ -46,6 +46,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="Show All Stock"
+        app:icon="@drawable/viewicon_foreground"
+        app:iconPadding="0dp"
+        app:iconSize="30dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/button7"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -70,7 +73,6 @@
         android:ems="10"
         android:hint="Product Name"
         android:inputType="text"
-        android:text="Product Name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -80,6 +82,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="36dp"
         android:text="Search"
+        app:icon="@drawable/findproducts_foreground"
+        app:iconPadding="0dp"
+        app:iconSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -91,6 +96,9 @@
         android:layout_marginEnd="36dp"
         android:layout_marginBottom="114dp"
         android:text="Back to Mainmenu"
+        app:icon="@drawable/backicon_foreground"
+        app:iconPadding="0dp"
+        app:iconSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -100,6 +108,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="Clear Search"
+        app:icon="@drawable/clearicon_foreground"
+        app:iconPadding="0dp"
+        app:iconSize="30dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/editTextText2"
         app:layout_constraintStart_toEndOf="@+id/editTextText2" />
 
