--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -81,6 +81,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="28dp"
         android:text="Add"
+        app:icon="@drawable/addicon_foreground"
+        app:iconPadding="0dp"
+        app:iconSize="30dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/button5"
         app:layout_constraintEnd_toStartOf="@+id/button5"
         app:layout_constraintStart_toStartOf="parent" />
@@ -92,6 +95,9 @@
         android:layout_marginTop="64dp"
         android:layout_marginEnd="9dp"
         android:text="Back"
+        app:icon="@drawable/backicon_foreground"
+        app:iconPadding="0dp"
+        app:iconSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button2"
         app:layout_constraintTop_toBottomOf="@+id/editTextText7" />
