--- a/app/src/main/res/layout/activity_delete.xml
+++ b/app/src/main/res/layout/activity_delete.xml
@@ -23,6 +23,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Delete"
+        app:icon="@android:drawable/ic_delete"
+        app:iconPadding="0dp"
+        app:iconSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,6 +37,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="33dp"
         android:text="Back"
+        app:icon="@drawable/backicon_foreground"
+        app:iconPadding="0dp"
+        app:iconSize="30dp"
         app:layout_constraintEnd_toEndOf="@+id/button2"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
 
