--- a/app/src/main/res/layout/activity_mainmenu.xml
+++ b/app/src/main/res/layout/activity_mainmenu.xml
@@ -11,23 +11,32 @@
         android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="267dp"
+        android:layout_marginBottom="41dp"
         android:text="Product Management System"
         app:icon="@drawable/auwikfgaekuigicon_foreground"
         app:iconPadding="0dp"
         app:iconSize="35dp"
-        tools:layout_editor_absoluteX="66dp"
-        tools:layout_editor_absoluteY="267dp" />
+        app:layout_constraintBottom_toTopOf="@+id/button8"
+        app:layout_constraintStart_toStartOf="@+id/button8"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button8"
-        android:layout_width="281dp"
-        android:layout_height="53dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="65dp"
+        android:layout_marginEnd="65dp"
+        android:layout_marginBottom="315dp"
         android:text="Stock Management System"
         app:icon="@drawable/stockicon_foreground"
         app:iconPadding="0dp"
         app:iconSize="40dp"
-        tools:layout_editor_absoluteX="65dp"
-        tools:layout_editor_absoluteY="363dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button6" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
