--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -29,14 +29,14 @@
 
     <EditText
         android:id="@+id/ed1"
-        android:layout_width="400dp"
-        android:layout_height="400dp"
+        android:layout_width="wrap_content"
+        android:layout_height="231dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="4dp"
-        android:layout_marginEnd="7dp"
-        android:layout_marginBottom="361dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="500dp"
         android:backgroundTint="@color/white"
         android:ems="10"
         android:inputType="text"
