--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -79,6 +79,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="28dp"
         android:text="Update"
+        app:icon="@drawable/updateicon_foreground"
+        app:iconPadding="0dp"
+        app:iconSize="30dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/button5"
         app:layout_constraintEnd_toStartOf="@+id/button5"
         app:layout_constraintStart_toStartOf="parent" />
@@ -90,6 +93,9 @@
         android:layout_marginTop="64dp"
         android:layout_marginEnd="9dp"
         android:text="Back"
+        app:icon="@drawable/backicon_foreground"
+        app:iconPadding="0dp"
+        app:iconSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button2"
         app:layout_constraintTop_toBottomOf="@+id/editTextText7" />
