--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bglogin"
     tools:context=".Login">
 
     <EditText
@@ -15,6 +16,7 @@
         android:ems="10"
         android:hint="Username"
         android:inputType="text"
+        android:textColorHint="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,6 +28,7 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="text"
+        android:textColorHint="@color/black"
         app:layout_constraintStart_toStartOf="@+id/ed1"
         app:layout_constraintTop_toBottomOf="@+id/ed1" />
 
@@ -33,8 +36,8 @@
         android:id="@+id/b1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="82dp"
-        android:layout_marginEnd="57dp"
+        android:layout_marginTop="88dp"
+        android:layout_marginEnd="28dp"
         android:text="Login"
         app:icon="@drawable/loginicon_foreground"
         app:iconPadding="0dp"
