--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bgadd2"
     tools:context=".update">
 
     <EditText
@@ -14,6 +15,7 @@
         android:ems="10"
         android:hint="Enter Product Name"
         android:inputType="text"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,6 +30,7 @@
         android:enabled="true"
         android:hint="Enter Cost Price"
         android:inputType="text"
+        android:textColorHint="@color/black"
         app:layout_constraintStart_toStartOf="@+id/editTextText3"
         app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
 
@@ -42,6 +45,7 @@
         android:enabled="true"
         android:hint="Enter Expiry Date"
         android:inputType="text"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/editTextText5"
         app:layout_constraintTop_toBottomOf="@+id/editTextText5" />
 
@@ -55,6 +59,7 @@
         android:enabled="true"
         android:hint="Enter Selling Price"
         android:inputType="text"
+        android:textColorHint="@color/black"
         app:layout_constraintStart_toStartOf="@+id/editTextText6"
         app:layout_constraintTop_toBottomOf="@+id/editTextText6" />
 
@@ -70,6 +75,7 @@
         android:enabled="true"
         android:hint="Enter Stock"
         android:inputType="text"
+        android:textColorHint="@color/black"
         app:layout_constraintStart_toStartOf="@+id/editTextText"
         app:layout_constraintTop_toBottomOf="@+id/editTextText" />
 
